# rustos

./: .gitignore  .rustc_info.json  Cargo.toml  Taskfile.yml  build.rs
.cargo/: config.toml
src/: main.rs
src/ostest/: mod.rs  qemu.rs
src/vgabuffer/: colorcode.rs  mod.rs  types.rs  writer.rs
vgabuffer/: Cargo.toml
vgabuffer/src/: colorcode.rs  lib.rs  types.rs  utils.rs  writer.rs
