[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
qemu-exit = "3.0.2"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.7"
x86_64 = "0.14.11"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
cargo_metadata = "0.18.1"
regex = "1.10.2"
serde_json = "1.0.108"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33
